.sigil.grammar
@(grammar sigil-agent)
@(stat tests:155 examples:4 stdlib:20)
@(impl ocaml tree-walking-interpreter)
@(bnf
  prog       ::= module | script-form+
  module     ::= '(' 'module' name imp* fn* test-spec* meta-note? ')'
  imp        ::= '(' 'import' name ')'
  fn         ::= '(' 'fn' name param* '->' ty stmt+ ')'
  lambda     ::= '(' '\' (name | '(' name+ ')') stmt+ ')'
  param      ::= name ty
  stmt       ::= set | call | ret | while | loop | for | foreach
               | if | ifelse | try | cond | break | continue
  set        ::= '(' 'set' name [ty] expr ')'
  call       ::= '(' ident expr* ')'
  ret        ::= '(' 'ret' expr ')'
  while      ::= '(' 'while' expr stmt+ ')'
  loop       ::= '(' 'loop' stmt+ ')'
  for        ::= '(' 'for' name expr expr stmt+ ')'   ; [start, end), int only
  foreach    ::= '(' 'for-each' name [ty] expr stmt+ ')'
  if         ::= '(' 'if' expr stmt+ ')'
  ifelse     ::= '(' 'if' expr stmt+ '(' 'else' stmt+ ')' ')'
  try        ::= '(' 'try' stmt+ '(' 'catch' name 'string' stmt+ ')' ')'
  cond       ::= '(' 'cond' ('(' expr stmt+ ')')+ ')'
  expr       ::= lit | var | call | lambda | '(' 'and' expr expr ')' | '(' 'or' expr expr ')'
               | '[' expr* ']' | '{' (expr expr)* '}' | argv
  argv       ::= '$'N | '#'N                           ; $N=arg_str, #N=arg_int
  lit        ::= int | float | decimal-d | string | 'true' | 'false'
  ty         ::= 'int'|'float'|'decimal'|'bool'|'string'|'array'|'map'
               | 'json'|'regex'|'process'|'socket'|'channel'|'unit')
@(builtins
  (arith
    (add a b -> same "int+int|float+float|decimal+decimal|string+string")
    (sub a b -> same "int|float|decimal")
    (mul a b -> same "int|float|decimal")
    (div a b -> same "int|float|decimal - panics on zero")
    (mod a:int b:int -> int)
    (neg a -> same "int|float|decimal")
    (abs a -> same "int|float|decimal")
    (min a b -> same "int|float|decimal")
    (max a b -> same "int|float|decimal")
    (sqrt a:float -> float)
    (pow a:float b:float -> float)
    (floor a:float -> int)
    (ceil a:float -> int)
    (round a:float -> int))
  (bitwise
    (bit_and a:int b:int -> int)
    (bit_or a:int b:int -> int)
    (bit_xor a:int b:int -> int)
    (bit_not a:int -> int)
    (bit_shift_left a:int n:int -> int)
    (bit_shift_right a:int n:int -> int "logical/unsigned shift"))
  (cmp
    (eq a b -> bool "int|float|decimal|bool|string|array|map - structural equality")
    (ne a b -> bool)
    (lt a b -> bool "int|float|decimal|string")
    (gt a b -> bool)
    (le a b -> bool)
    (ge a b -> bool))
  (logic
    (not a:bool -> bool))
  (string
    (string_length s:string -> int)
    (string_concat a:string b:string -> string)
    (string_equals a:string b:string -> bool)
    (string_slice s:string start:int length:int -> string "CRITICAL: 3rd arg is LENGTH not end")
    (string_split s:string delim:string -> array)
    (string_join arr:array delim:string -> string)
    (string_find haystack:string needle:string -> int "-1 if not found")
    (string_format template:string args... -> string "{} placeholders")
    (string_contains haystack:string needle:string -> bool)
    (string_starts_with s:string prefix:string -> bool)
    (string_ends_with s:string suffix:string -> bool)
    (string_trim s:string -> string)
    (string_replace s:string old:string new:string -> string "replaces all occurrences")
    (string_to_upper s:string -> string)
    (string_to_lower s:string -> string)
    (string_get s:string idx:int -> int "char code as int")
    (char_from_code n:int -> string)
    (string_chars s:string -> array "split into array of single-char strings")
    (is_digit x -> bool "true if char code 48-57, accepts int or single-char string")
    (is_alpha x -> bool "true if A-Z or a-z")
    (is_upper x -> bool "true if A-Z")
    (is_lower x -> bool "true if a-z")
    (is_whitespace x -> bool "true if space/tab/newline/cr")
    (to_upper_char x -> same "convert lowercase to uppercase, preserves type")
    (to_lower_char x -> same "convert uppercase to lowercase, preserves type")
    (len x -> int "polymorphic length: works on string, array, map")
    (split s:string sep:string -> array "split string on separator, supports multi-char")
    (join arr:array sep:string -> string "join array, auto-converts non-string elements")
    (lower s:string -> string "lowercase alias")
    (upper s:string -> string "uppercase alias")
    (trim s:string -> string "trim whitespace alias")
    (chars s:string -> array "split into single-char array, alias for string_chars")
    (in needle haystack -> bool "polymorphic membership: substring in string, element in array, key in map")
    (fmt template:string args... -> string "named {var} and positional {} interpolation, looks up names in scope")
    (count_in needles haystack -> int "count chars/elements in first that appear in second"))
  (cast
    (cast_int_float a:int -> float)
    (cast_float_int a:float -> int)
    (cast_int_decimal a:int -> decimal)
    (cast_decimal_int a:decimal -> int)
    (cast_float_decimal a:float -> decimal)
    (cast_decimal_float a:decimal -> float)
    (string_from_int a:int -> string)
    (string_from_float a:float -> string)
    (string_from_bool a:bool -> string)
    (str a -> string "polymorphic to-string: int, float, bool, decimal, string")
    (string_to_int a:string -> int)
    (string_to_float a:string -> float)
    (int x -> int "alias: parse string/float/int to int")
    (float x -> float "alias: parse string/int/float to float")
    (type_of a -> string))
  (array
    (array_new -> array "empty dynamic array")
    (array_push arr:array val -> array "mutates + returns")
    (array_pop arr:array -> val "removes + returns last")
    (array_get arr:array idx:int -> val)
    (array_set arr:array idx:int val -> array)
    (array_length arr:array -> int)
    (array_slice arr:array start:int len:int -> array)
    (array_concat a:array b:array -> array)
    (array_contains arr:array val -> bool)
    (array_index_of arr:array val -> int "-1 if not found")
    (array_sort arr:array -> array "mutates + returns")
    (array_reverse arr:array -> array "mutates + returns")
    (array_remove arr:array idx:int -> array)
    (array_copy arr:array -> array "deep copy")
    (push arr:array val -> array "alias for array_push")
    (sort arr:array -> array "alias for array_sort")
    (sum arr:array -> int|float "sum homogeneous int or float array")
    (parse_ints s:string sep:string? -> array "split + parse, default sep is space"))
  (map
    (map_new -> map)
    (map_get m:map key:string -> val)
    (map_set m:map key:string val -> map)
    (map_has m:map key:string -> bool)
    (map_delete m:map key:string -> map)
    (map_keys m:map -> array)
    (map_values m:map -> array)
    (map_entries m:map -> array "array of [key, value] arrays")
    (map_length m:map -> int)
    (map_copy m:map -> map "deep copy")
    (map_inc m:map key:string -> int "increment int counter at key, initializes to 1 if missing")
    (get_or coll key default -> val "polymorphic get with default — works on map or array"))
  (io
    (print vals... -> unit "variadic, args space-separated, polymorphic")
    (println vals... -> unit "variadic print + newline, args space-separated")
    (read_line -> string "read line from stdin"))
  (file
    (file_read path:string -> string)
    (file_write path:string data:string -> bool)
    (file_append path:string data:string -> bool)
    (file_exists path:string -> bool)
    (file_delete path:string -> bool)
    (file_size path:string -> int)
    (dir_list path:string -> array)
    (dir_create path:string -> bool)
    (dir_delete path:string -> bool))
  (json
    (json_parse s:string -> json)
    (json_stringify j:json -> string)
    (json_new_object -> json)
    (json_new_array -> json)
    (json_get j:json key:string -> val)
    (json_set j:json key:string val -> json)
    (json_has j:json key:string -> bool)
    (json_delete j:json key:string -> json)
    (json_push j:json val -> json)
    (json_length j:json -> int)
    (json_type j:json -> string)
    (is_object j:json -> bool)
    (is_array j:json -> bool))
  (regex
    (regex_compile pattern:string -> regex)
    (regex_match r:regex s:string -> bool)
    (regex_find r:regex s:string -> string)
    (regex_find_all r:regex s:string -> array)
    (regex_replace r:regex s:string replacement:string -> string))
  (net
    (tcp_listen port:int -> socket)
    (tcp_accept sock:socket -> socket)
    (tcp_connect host:string port:int -> socket)
    (tcp_tls_connect host:string port:int -> socket)
    (tcp_send sock:socket data:string -> unit)
    (tcp_receive sock:socket bufsize:int -> string)
    (tcp_close sock:socket -> unit)
    (socket_select socks:array -> array "timeout hardcoded 0.01s"))
  (websocket
    (ws_accept sock:socket -> socket)
    (ws_connect host:string port:int path:string -> socket)
    (ws_send sock:socket data:string -> unit)
    (ws_receive sock:socket -> string)
    (ws_close sock:socket -> unit))
  (channel
    (channel_new -> channel)
    (channel_send ch:channel val -> unit)
    (channel_recv ch:channel -> val))
  (process
    (process_spawn cmd:string args:array -> process)
    (process_wait p:process -> int)
    (process_kill p:process sig:int -> bool)
    (process_read p:process -> string)
    (process_write p:process data:string -> unit)
    (process_exec cmd:string -> int "exit code, -1 on signal"))
  (system
    (argv -> array "CLI args after filename")
    (argv_count -> int "count of CLI args")
    (arg_int n:int -> int "shorthand: (string_to_int (array_get (argv) n))")
    (arg_str n:int -> string "shorthand: (array_get (argv) n)")
    (arg_float n:int -> float "shorthand: (string_to_float (array_get (argv) n))")
    (time_now -> int "unix timestamp")
    (sleep ms:int -> unit)
    (getenv name:string -> string "empty if not found")
    (exit code:int -> unit)
    (stdin_read_all -> string)))
@(literals
  (array "[1 2 3]" "creates VArray with elements")
  (map "{\"key\" \"val\"}" "creates VMap with string keys")
  (decimal "19.99d" "d-suffix creates decimal type"))
@(special-forms
  (and "short-circuit: (and e1 e2) - returns false if e1 is false, e2 not evaluated")
  (or "short-circuit: (or e1 e2) - returns true if e1 is true, e2 not evaluated")
  (cond "(cond (e1 s1...) (e2 s2...) (true s3...)) - flat multi-branch conditional")
  (try-catch "(try body... (catch var type handler...)) - catches RuntimeError, message bound as string"))
@(ex
  (fn add a int b int -> int (ret (add a b)))
  (fn fact n int -> int
    (if (eq n 0) (ret 1))
    (ret (mul n (fact (sub n 1)))))
  (fn sum_for arr array -> int
    (set s int 0)
    (set len int (array_length arr))
    (for i 0 len
      (set s (add s (array_get arr i))))
    (ret s))
  (fn sum_foreach arr array -> int
    (set s int 0)
    (for-each val int arr
      (set s (add s val)))
    (ret s))
  (set nums array [1 2 3 4 5])
  (set config map {"name" "Alice" "age" 30})
  (cond
    ((lt x 0) (set result string "negative"))
    ((eq x 0) (set result string "zero"))
    (true (set result string "positive"))))
@(mod
  (stdlib-modules "20 modules in pure Sigil")
  (core "string_utils conversion array_utils math math_extended filesystem network text_utils validation number_theory char_utils encoding")
  (data "json_utils")
  (net "http")
  (pattern "regex")
  (sys "process")
  (db "sqlite")
  (crypto "base64 hash hmac")
  (paths "stdlib/core/ stdlib/data/ stdlib/net/ stdlib/sys/ stdlib/pattern/ stdlib/db/ stdlib/crypto/")
  (import-syntax "(import module_name) - auto-searches stdlib subdirs"))
@(note
  (no-comments "Sigil has NO comment syntax - no ; // # or any other form")
  (explicit-types "type optional everywhere: (set x 0) infers from value. Only required when inference is ambiguous (e.g. empty array_new).")
  (script-mode "files without (module ...) wrapper treated as script: top-level (fn ...) defs + expressions form implicit main")
  (argv-shorthand "$N expands to (arg_str N), #N to (arg_int N). Save 5+ tokens per CLI arg access.")
  (variadic-println "(println a b c) prints \"a b c\\n\" with space separator. Single-arg usage unchanged.")
  (fmt-interpolation "(fmt \"hello {name} age {}\" age) — named {} looks up in scope, empty {} takes positional args")
  (implicit-main-ret "main returns 0 by default — drop trailing (ret 0) boilerplate")
  (no-implicit-conv "use cast_int_float etc - no auto-coercion")
  (type-dispatch "write (add x y) - interpreter infers add_int|add_float|add_decimal from x type")
  (module-keyword "use (module ...) NOT (mod ...) - mod is modulo")
  (string-slice-params "CRITICAL: string_slice(str start LENGTH) - 3rd arg is LENGTH not end index")
  (array-new-no-args "(array_new) takes NO parameters - use [1 2 3] for literals")
  (reserved-var-names "CANNOT use as variable names: int float decimal string bool unit array map json regex process socket channel input expect case")
  (reserved-module-names "CANNOT name modules: json array map string int float bool etc")
  (entry-point "fn main -> int required for programs - test files with test-spec don't need main")
  (if-else "(if cond then... (else else...)) - else block optional, must be last")
  (cond-construct "(cond (cond1 body1...) (cond2 body2...) (true default...)) - flat multi-branch, replaces nested if-else")
  (for-loop "(for var start end body...) - counting loop, i in [start, end), exclusive upper bound, int only")
  (for-each "(for-each var type collection body...) - iterates array elements or map keys")
  (try-catch "(try body... (catch var string handler...)) - catch type must be string")
  (no-closures "functions do NOT capture outer scope variables - pass all data as parameters")
  (test-framework "test-spec with case/input/expect - all test files MUST use this")
  (and-or-special "and/or are AST-level short-circuit forms, NOT function calls")
  (decimal-type "arbitrary precision: 0.1 + 0.2 = 0.3 exactly - use for money")
  (decimal-suffix "19.99d creates decimal literal directly")
  (prefer-string-format "use (string_format \"id:{} name:{}\" id name) over string_concat chains for multi-part strings")
  (print-polymorphic "(print x) works for int float bool string decimal array map")
  (run "./interpreter/_build/default/vm.exe program.sigil")
  (build "cd interpreter && eval $(opam env) && dune build"))
